<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- !!!!! don't translate _default strings !!!!! -->

    <!-- Xperia Home -->
    <string name="app_tray_drawer_list_item_categories_hidden">Ukryte</string>
    <string name="app_tray_drawer_list_item_categories_settings">Ustawienia</string>
    
    <!-- Color Picker -->
    <string name="dialog_color_picker">Wybór koloru</string>
    <string name="press_color_to_apply">Dotknij koloru, aby zatwierdzić</string>
    
    <string name="app_name">GEM Xperia Xposed</string>
    <string name="app_list_loading">Wczytywanie aplikacji, proszę czekać</string>
    <string name="action_settings">Settings</string>
    
    <string name="launcher">Ustawienia launchera</string>
    <string name="restart_launcher">Zresetuj launcher</string>
    <string name="restart_launcher_summary">Restart launchera jest wymagany do zaaplikowania zmian (wymaga ROOTa).</string>
    
    <string name="launcher_experimental">Eksperymentalne</string>
    <string name="enable_experimental">Włącz eksperymentalne funkcje</string>
    <string name="fullscreen_layout">Włącz tryb pełnoekranowy</string>
    <string name="fullscreen_layout_summary">Pozwala komponentom launchera na rysowanie pod systemowym paskiem.</string>
    <string name="experimental_tutorial">Tutorial</string>
    <string name="settings_menu">Ustawienia w menu</string>
    <string name="alphabetical_badge">Tryb alfabetyczny</string>
    <string name="hide_apps">Ukrywanie aplikacji</string>
    <string name="unread_count">Licznik nieprzeczytanych</string>
    <string name="tutorial_fullscreen_layout">Tryb pełnoekranowy</string>
    
    <string name="launcher_general">Generalne</string>
    <string name="launcher_icon_size">Rozmiar ikon</string>
    <string name="launcher_label_text_size">Rozmiar tekstu</string>
    <string name="condensed_font">Skrócony tekst</string>
    <string name="all_widgets_resizable">Skalowanie wszystkich widgetów</string>
    <string name="all_widgets_resizable_summary">Podczas skalowania widgetów od Sony, może być potrzebny restart launchera, aby przeskalowały się one poprawnie.</string>
    
    <string name="launcher_desktop">Pulpit</string>
    <string name="transparent_desktop">Przeźroczysty systemowy pasek</string>
    <string name="transparent_desktop_summary">Przeźroczysty pasek stanu i nawigacji.</string>
    <string name="desktop_rows">Wiersze</string>
    <string name="desktop_rows_default">4</string>
    <string name="desktop_columns">Kolumny</string>
    <string name="desktop_columns_default">4</string>
    <string name="desktop_disable_labels">Wyłącz etykiety</string>
    <string name="desktop_multiline_labels">Wielo-liniowe etykiety</string>
    <string name="desktop_disable_pagination">Wyłącz wskaźnik strony</string>
    <string name="desktop_autohide_pagination">Auto-ukrywanie wskaźnika strony</string>
    <string name="desktop_animation">Animacja przewijania</string>
    <string name="desktop_animation_default">0</string>
    
    <string name="launcher_dock">Dok</string>
    <string name="dock_columns">Kolumny</string>
    <string name="dock_columns_default">5</string>
    <string name="disable_dock_stage">Ukryj tło</string>
    <string name="disable_dock_reflection">Ukryj odbicie</string>
    <string name="large_dock_reflection">Mocne odbicie</string>
    
    <string name="launcher_folders">Foldery</string>
    <string name="folder_columns">Kolumny</string>
    <string name="folder_columns_default">4</string>
    <string name="folder_disable_labels">@string/desktop_disable_labels</string>
    <string name="folder_multiline_labels">@string/desktop_multiline_labels</string>
    
    <string name="launcher_drawer">Menu</string>
    <string name="transparent_drawer">Przeźroczysty systemowy pasek</string>
    <string name="transparent_drawer_summary">Przeźroczysty pasek stanu i nawigacji.</string>
    <string name="enable_drawer_background">Kolor tła</string>
    <string name="enable_drawer_background_summary">Włącz tryb pełnoekranowy i przeźroczysty pasek systemowy dla lepszego efektu.</string>
    <string name="drawer_background">Kolor tła</string>
    <string name="drawer_rows">Wiersze</string>
    <string name="drawer_rows_default">5</string>
    <string name="drawer_columns">Kolumny</string>
    <string name="drawer_columns_default">4</string>
    <string name="drawer_disable_labels">@string/desktop_disable_labels</string>
    <string name="drawer_disable_pagination">@string/desktop_disable_pagination</string>
    <string name="drawer_autohide_pagination">@string/desktop_autohide_pagination</string>
    <string name="disable_drawer_backplate">Ukryj tło</string>
    <string name="remember_drawer_page">Zapamiętaj ostatnią stronę</string>
    <string name="drawer_menu_opacity">Przeźroczystość menu</string>
    <string name="menu_dark_bars">Ciemne paski menu nawigacji</string>
    <string name="drawer_animation">@string/desktop_animation</string>
    <string name="drawer_animation_default">7</string>
    
    <string name="lockscreen">Ustawienia blokady ekranu</string>
    <string name="reboot_phone_lockscreen">Uwaga</string>
    <string name="reboot_phone_summary_lockscreen">Musisz zresetować telefon, aby zobaczyć zmiany.</string>
    <string name="transparent_lockscreen">Przeźroczysty pasek stanu</string>
    <string name="slide_before_unlock">Przesuń przed odblokowaniem</string>
    <string name="hide_widget_backplate">Ukryj tło widgetów</string>
    <string name="hide_shortcuts">Ukryj ikony skrótów</string>
    <string name="hide_hint_arrows">Ukryj strzałki podpowiedzi</string>
    <string name="hint_text">Wskazówki</string>
    <string name="hint_text_summary">Zostaw puste dla domyślnej podpowiedzi oraz spację, aby ją ukryć.</string>
    <string name="carrier_text">Nazwa operatora sieci</string>
    <string name="hint_carrier_summary">Zostaw puste dla domyślnej nazwy sieci oraz spację, aby ją ukryć.</string>
    <string name="more_unlock_blinds">Małe rolety</string>
    <string name="folder_disable_background_dim">Wyłącz przyciemnianie tła</string>
    <string name="enable_standard_lockscreen">Włącz ekran blokady AOSP</string>
    <string name="enable_standard_lockscreen_summary">Standardowy ekran blokady AOSP z obsługą "żywych tapet".</string>
    <string name="volume_keys_wake">Wybudź klawiszami głośności</string>
    
    <string name="systemui">Ustawienia SystemUI</string>
    <string name="systemui_colors">Kolory</string>
    <string name="restart_systemui">Zresetuj SystemUI</string>
    <string name="restart_systemui_summary">Zresetuj SystemUI, aby zobaczyć zmiany (wymaga ROOTa).</string>
    <string name="reset_to_default">Przywróć domyślne ustawienia</string>
    
    <string name="systemui_status_colors">Pasek stanu</string>
    <string name="systemui_status_gradient">Gradient</string>
    <string name="systemui_status_gradient_summary">Włącz KitKatowy gradient.</string>
    <string name="systemui_status_color_set">Ustaw kolor</string>
    <string name="systemui_status_color_set_default">system</string>
    <string name="systemui_dark_background">Ciemny</string>
    <string name="systemui_light_background">Jasny</string>
    <string name="systemui_translucent_background">Przeźroczysty</string>
    
    <string name="systemui_nav_colors">Pasek nawigacji</string>
    <string name="systemui_nav_gradient">@string/systemui_status_gradient</string>
    <string name="systemui_nav_gradient_summary">@string/systemui_status_gradient_summary</string>
    <string name="systemui_nav_color_set">Ustaw kolor</string>
    <string name="systemui_nav_color_set_default">status</string>
    <string name="systemui_same_nav_colors">Taki jak pasek stanu</string>
    <string name="systemui_nav_dark_background">Ciemny</string>
    <string name="systemui_nav_light_background">Jasny</string>
    <string name="systemui_nav_translucent_background">Przeźroczysty</string>
    
    <string name="systemui_appearance">Wygląd</string>
    <string name="systemui_enable_appearance_customization">Włącz modyfikowanie</string>
    <string name="systemui_enable_appearance_customization_summary">Wymaga restartu.</string>
    <string name="systemui_global_settings">Ustawienia globalne</string>
    <string name="systemui_app_settings">Ustawienia aplikacji</string>

    <string name="systemui_app_settings_note">Uwaga</string>
    <string name="systemui_app_settings_note_summary">Przeźroczysty SystemUI działa tylko dla aplikacji, które go obsługują, np.: launchery.</string>
    <string name="systemui_app_color">Wygląd SystemUI</string>
    <string name="systemui_app_rounded_corners">Zaokrąglone narożniki</string>
    <string name="systemui_color_default">Domyślne</string>
    <string name="systemui_rounded_corners_default">Domyślne</string>
    
    <string name="about">O...</string>
    <string name="about_app_summary">Autor - greg2001@XDA. Dotknij, aby odwiedzić temat na XDA.</string>
    <string name="about_xposed">Xposed Framework</string>
    <string name="about_xposed_summary">Autor - rovo89@XDA. Dotknij, aby odwiedzić temat na XDA.</string>
    <string name="about_theme">Motyw</string>
    <string name="about_theme_default">jasny</string>
  
</resources>
