<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceScreen android:title="@string/launcher">
        <Preference android:key="key_restart_launcher"
                    android:title="@string/restart_launcher" 
                    android:summary="@string/restart_launcher_summary"/> 
        <PreferenceCategory android:title="@string/launcher_general">
            <com.gem.xperiaxposed.SliderPreference
                android:key="key_launcher_icon_size"
                android:title="@string/launcher_icon_size"
				android:defaultValue="100" 
                minimum="50"
                maximum="100"
                step="1"
                currentValueFormat="%d%%"/>
            <com.gem.xperiaxposed.SliderPreference
                android:key="key_launcher_label_text_size"
                android:title="@string/launcher_label_text_size"
                android:defaultValue="100"
                minimum="50"
                maximum="100"
                step="1"
                currentValueFormat="%d%%"/>
            <CheckBoxPreference
                android:key="key_condensed_font"
                android:title="@string/condensed_font"
                android:defaultValue="false"/>
            <CheckBoxPreference
                android:key="key_all_widgets_resizable"
                android:title="@string/all_widgets_resizable"
                android:summary="@string/all_widgets_resizable_summary"
                android:defaultValue="false"/>
            </PreferenceCategory>
        <PreferenceCategory android:title="@string/launcher_desktop">        
            <CheckBoxPreference
                android:key="key_transparent_desktop"
                android:title="@string/transparent_desktop"
                android:summary="@string/transparent_desktop_summary"
                android:defaultValue="false"/>
            <ListPreference
                android:key="key_desktop_rows"
                android:title="@string/desktop_rows"
                android:dialogTitle="@string/desktop_rows"
                android:entries="@array/desktop_rows_entries"
                android:entryValues="@array/desktop_rows_entries"
                android:defaultValue="@string/desktop_rows_default"/>            
            <ListPreference
                android:key="key_desktop_columns"
                android:title="@string/desktop_columns"
                android:dialogTitle="@string/desktop_columns"
                android:entries="@array/desktop_columns_entries"
                android:entryValues="@array/desktop_columns_entries"
                android:defaultValue="@string/desktop_columns_default"/>            
            <CheckBoxPreference
                android:key="key_desktop_multiline_labels"
                android:title="@string/desktop_multiline_labels"
                android:defaultValue="false"/>
            <CheckBoxPreference
                android:key="key_desktop_autohide_pagination"
                android:title="@string/desktop_autohide_pagination"
                android:defaultValue="false"/>
            </PreferenceCategory>
        <PreferenceCategory android:title="@string/launcher_dock">        
            <ListPreference
                android:key="key_dock_columns"
                android:title="@string/dock_columns"
                android:dialogTitle="@string/dock_columns"
                android:entries="@array/dock_columns_entries"
                android:entryValues="@array/dock_columns_entries"
                android:defaultValue="@string/dock_columns_default"/>            
            <CheckBoxPreference
                android:key="key_disable_dock_stage"
                android:title="@string/disable_dock_stage"
                android:defaultValue="false"/>
            <CheckBoxPreference
                android:key="key_disable_dock_reflection"
                android:title="@string/disable_dock_reflection"
                android:defaultValue="false"/>
            <CheckBoxPreference
                android:key="key_large_dock_reflection"
                android:title="@string/large_dock_reflection"
                android:defaultValue="false"/>
            </PreferenceCategory>
        <PreferenceCategory android:title="@string/launcher_folders">        
            <ListPreference
                android:key="key_folder_columns"
                android:title="@string/folder_columns"
                android:dialogTitle="@string/folder_columns"
                android:entries="@array/folder_columns_entries"
                android:entryValues="@array/folder_columns_entries"
                android:defaultValue="@string/folder_columns_default"/>            
            <CheckBoxPreference
                android:key="key_folder_multiline_labels"
                android:title="@string/folder_multiline_labels"
                android:defaultValue="false"/>
            <CheckBoxPreference
                android:key="key_folder_disable_background_dim"
                android:title="@string/folder_disable_background_dim"
                android:defaultValue="false"/>
            </PreferenceCategory>
        <PreferenceCategory android:title="@string/launcher_drawer">        
            <CheckBoxPreference
                android:key="key_transparent_drawer"
                android:title="@string/transparent_drawer"
                android:summary="@string/transparent_drawer_summary"
                android:defaultValue="false"/>
            <ListPreference
                android:key="key_drawer_rows"
                android:title="@string/drawer_rows"
                android:dialogTitle="@string/drawer_rows"
                android:entries="@array/drawer_rows_entries"
                android:entryValues="@array/drawer_rows_entries"
                android:defaultValue="@string/drawer_rows_default"/>            
            <ListPreference
                android:key="key_drawer_columns"
                android:title="@string/drawer_columns"
                android:dialogTitle="@string/drawer_columns"
                android:entries="@array/drawer_columns_entries"
                android:entryValues="@array/drawer_columns_entries"
                android:defaultValue="@string/drawer_columns_default"/>            
            <CheckBoxPreference
                android:key="key_disable_drawer_backplate"
                android:title="@string/disable_drawer_backplate"
                android:defaultValue="false"/>
        </PreferenceCategory>
    </PreferenceScreen>
    
    <PreferenceScreen android:title="@string/lockscreen">
        <Preference android:title="@string/reboot_phone" 
                    android:summary="@string/reboot_phone_summary"
                    style="?android:preferenceInformationStyle" />
        <CheckBoxPreference
            android:key="key_transparent_lockscreen"
            android:title="@string/transparent_lockscreen"
            android:defaultValue="false"/>
        <CheckBoxPreference
            android:key="key_enable_standard_lockscreen"
            android:title="@string/enable_standard_lockscreen"
            android:summary="@string/enable_standard_lockscreen_summary"
            android:disableDependentsState="true"
            android:defaultValue="false"/>
        <CheckBoxPreference
            android:key="key_hide_widget_backplate"
            android:title="@string/hide_widget_backplate"
            android:defaultValue="false"/>
        <CheckBoxPreference
            android:key="key_hide_shortcuts"
            android:title="@string/hide_shortcuts"
            android:defaultValue="false"/>
        <EditTextPreference
            android:key="key_carrier_text"
            android:title="@string/carrier_text"
            android:summary="@string/hint_carrier_summary"
            android:defaultValue=""/>
        <EditTextPreference
            android:key="key_hint_text"
            android:title="@string/hint_text"
            android:summary="@string/hint_text_summary"
            android:dependency="key_enable_standard_lockscreen"
            android:defaultValue=""/>
        <CheckBoxPreference
            android:key="key_hide_hint_arrows"
            android:title="@string/hide_hint_arrows"
            android:dependency="key_enable_standard_lockscreen"
            android:defaultValue="false"/>
        <CheckBoxPreference
            android:key="key_more_unlock_blinds"
            android:title="@string/more_unlock_blinds"
            android:dependency="key_enable_standard_lockscreen"
            android:defaultValue="false"/>
    </PreferenceScreen>
</PreferenceScreen>
